--- a/algoritmo3/arvore-bin/.vscode/settings.json
+++ b/algoritmo3/arvore-bin/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "string": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
